Layer 1 test improvements